# rofi-plugin-sys.rs

./: Cargo.toml  README.md
examples/basic/: Cargo.toml  run.sh
examples/basic/src/: lib.rs
src/: helper.rs  icon_fetcher.rs  lib.rs  mode.rs  mode_private.rs  types.rs  view.rs
