[package]
name = "rofi-plugin-sys"
version = "0.3.0"
edition = "2021"
rust-version = "1.59.0"
description = "Raw FFI bindings to Rofi's C plugin interface"
repository = "https://github.com/SabrinaJewson/rofi-plugin-sys.rs"
license = "MIT"
keywords = ["rofi", "plugin"]
categories = ["external-ffi-bindings"]

[dependencies]
bitflags = "2.0.1"
cairo-sys-rs = "0.17.0"
glib-sys = "0.17.4"

[workspace]
members = ["examples/basic"]
