[package]
name = "rofi-plugin-sys"
version = "0.5.0"
edition = "2021"
rust-version = "1.59.0"
description = "Raw FFI bindings to Rofi's C plugin interface"
repository = "https://github.com/SabrinaJewson/rofi-plugin-sys.rs"
license = "MIT"
keywords = ["rofi", "plugin"]
categories = ["external-ffi-bindings"]

[dependencies]
bitflags = "2.0.1"
cairo-sys-rs = "0.19.2"
glib-sys = "0.19.0"

[workspace]
members = ["examples/basic"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rofi_next)'] }
